<?xml version="1.0" encoding="utf-8"?>
<layout>

    <!-- Use ConstraintLayout to constraint positioned-relation between attributes and spaces -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.onboarding.WelcomeFragment"
    android:background="@drawable/background_welcome">

    <!-- Use LinearLayout ho arrange two texts vertically -->
    <LinearLayout
        android:id="@+id/welcome_txt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_txt_first"
            android:textSize="27sp"
            android:fontFamily="sans-serif"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_txt_second"
            android:layout_marginTop="100dp"
            android:textSize="25sp"
            android:fontFamily="sans-serif"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    </LinearLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/action_next"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/purple_700"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>