<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="shoeItem"
            type="com.example.shoestore.model.Shoe" />
    </data>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/white">

    <!-- Use LinearLayout ho arrange all text views vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Use LinearLayout ho arrange name and size texts and their values text views horizontally -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:layout_marginHorizontal="5dp"
            android:paddingVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_shoe_name"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/shoe_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeItem.name}"
                android:textStyle="italic"
                android:layout_weight="2"
                android:textColor="@color/purple_700"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_shoe_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/shoe_size_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeItem.size}"
                android:layout_weight="2"
                android:textColor="@color/purple_700"
                />

        </LinearLayout>


        <!-- Use LinearLayout ho arrange two company and description texts horizontally with their  values -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginHorizontal="5dp"
            android:paddingVertical="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_shoe_company"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/shoe_company_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeItem.company}"
                android:layout_weight="2"
                android:textColor="@color/purple_700"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginHorizontal="5dp"
            android:paddingVertical="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_shoe_description"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/shoe_description_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeItem.description}"
                android:layout_weight="2"
                android:textColor="@color/purple_700"
                android:maxEms="25"
                android:maxLines="5"
                />

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>

</layout>